YUR-195: Updated CORS configuration